# ConsoleProgram

./: .gitignore  CMakeLists.txt  ConsoleProgram.cpp  ConsoleProgram.h  README.md  Test.tst  main.cpp
src/: CMakeLists.txt  ConsoleProgram.cpp  ConsoleProgram.h  main.cpp
test/: CMakeLists.txt  testmain.cpp
